(REACT UI DAY 2 - CALC) (STRETCH - BUGFIXING) : added a limit to the decimal places using .toFixed(10) and mage the font a bit smaller also gave the calculator display an overflow: hidden

--- a/Day-II-Calculator/calculator/src/components/DisplayComponents/Display.css
+++ b/Day-II-Calculator/calculator/src/components/DisplayComponents/Display.css
@@ -4,10 +4,11 @@
   width: 400px;
   padding: 10px;
   height: 100px;
-  font-size: 50px;
+  font-size: 30px;
   text-align: right;
   justify-content: flex-end;
   align-items: center;
   background-color: #222;
   color: #fff;
+  overflow: hidden;
 }
